wtx-macros-tests/tests/fail/bad_aux.stderr
error: #[pkg::aux] must be an item implementation with none, one `#[pkg::aux_data]`, one `#[pkg::aux_params]` or both `#[pkg::aux_data]` and `#[pkg::aux_params]`
 --> tests/fail/bad_aux.rs:3:10
  |
3 |   #[pkg::aux]
  |          ^^^

error: aborting due to 1 previous error

